--- a/client/src/assets/scss/_reset.scss
+++ b/client/src/assets/scss/_reset.scss
@@ -7,9 +7,14 @@
 
   font-family: $font-primary;
   font-weight: $font-weight-regular;
+  font-size: $font-size-regular;
   line-height: $line-height;
 
   color: $colour-white;
+
+  @media (min-width: $breakpoint-mobile) {
+    font-size: $font-size-large;
+  }
 }
 
 :root {
