--- a/client/src/assets/scss/_typography.scss
+++ b/client/src/assets/scss/_typography.scss
@@ -8,5 +8,11 @@ $font-weight-medium: 500;
 $font-weight-bold: 700;
 $font-weight-extra-bold: 800;
 
+// Font sizes
+$font-size-regular: 1rem;
+$font-size-large: 1.5rem;
+$font-size-extra-large: 2rem;
+$font-size-extra-extra-large: 3rem;
+
 // Line Height
 $line-height: 1.5;
