--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -5,7 +5,7 @@
   height: 4rem;
   border-radius: 50%;
   background: $colour-gradient-radial-blue;
-  border: 1px solid black;
+  border: 1px solid $colour-grey-dark;
   text-align: center;
   line-height: 4rem;
   cursor: pointer;
