--- a/client/src/components/Layout/Layout.scss
+++ b/client/src/components/Layout/Layout.scss
@@ -6,6 +6,12 @@
     "first first"
     "second third";
 
+  &--loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   & > :nth-child(1) {
     grid-area: first;
   }
