--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -12,6 +12,11 @@
   transition: box-shadow 0.2s ease-in-out;
   aspect-ratio: 1 / 1;
 
+  &--disabled {
+    cursor: not-allowed;
+    color: $colour-grey-light;
+  }
+
   &:hover {
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.25);
   }
