--- a/client/src/components/FloorDisplay/FloorDisplay.scss
+++ b/client/src/components/FloorDisplay/FloorDisplay.scss
@@ -7,6 +7,7 @@
   padding: 1rem;
   border-bottom: 2px solid $colour-grey-dark;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  height: fit-content;
 
   &__floor {
     font-size: inherit;
