added component unit tests

--- a/client/src/components/DestinationTrackerItem/DestinationTrackerItem.scss
+++ b/client/src/components/DestinationTrackerItem/DestinationTrackerItem.scss
@@ -23,7 +23,10 @@
     }
 
     &__lift {
-      color: $colour-yellow;
+      &--arrived {
+        color: $colour-yellow;
+        font-weight: $font-weight-bold;
+      }
     }
   }
 }
