refactored to use ContextAPI

--- a/client/src/components/ButtonPanel/ButtonPanel.scss
+++ b/client/src/components/ButtonPanel/ButtonPanel.scss
@@ -1,6 +1,6 @@
 @use "../../assets/scss/variables" as *;
 
-.button-container {
+.button-panel {
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
